[gd_scene load_steps=3 format=3 uid="uid://vx0xxbc8v2qk"]

[ext_resource type="Script" uid="uid://cy6212ouppwpf" path="res://scripts/settings_menu.gd" id="1_yvmxs"]
[ext_resource type="PackedScene" uid="uid://cgjc6axagv27g" path="res://scenes/tilemap.tscn" id="2_cr101"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmxs")

[node name="RiverTile" parent="." instance=ExtResource("2_cr101")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.351563, 0.351563, 0.351563, 0.462745)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="MuteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Mute"

[node name="MusicVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="MuteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Mute"

[node name="SFXVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="MuteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "Mute"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
